update sliders text

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
           statement sweaters, <strong>sexy</strong> denim and
           all the cute shoes and boots.</p>
         <p class="paragraph"><strong>So go ahead-fall in!</strong></p>
+      </section>
     </div>
     <section class="top-offers col-12">
       <h2 class="title">TOP OFFERS!</h2>
