--- a/pages/men.html
+++ b/pages/men.html
@@ -49,58 +49,66 @@
       <div class="swiper-wrapper">
         <article class="swiper-slide">
           <img class="swiper-image" src="../images/men/black-white-stripes.jpg" alt="offer-mockup-1">
-          <div class="swiper-description">
-            <h3>Black & White Stripes Shirt</h3>
-            <p>$300</p>
-            <p>3 interest-free fees of $300</p>
+          <div class="card__body">
+            <h5 class="card-title mb-3">Black & White Stripes Shirt</h5>
+            <p>Shirts</p>
+            <h6 class="mb-3">$61.99</h6>
           </div>
         </article>
         <article class="swiper-slide">
           <img class="swiper-image" src="../images/men/black-shoes.jpg" alt="offer-mockup-1">
-          <div class="swiper-description">
-            <h3>Black Leather's Classic Chelsea Boot</h3>
-            <p>$300</p>
-            <p>3 interest-free fees of $300</p>
+          <div class="card__body">
+            <h5 class="card-title mb-3">Black Classic Chelsea Pants</h5>
+            <p>Shoulders</p>
+            <h6 class="mb-3">
+              <s>$61.99</s><strong class="ms-2 text-danger">$50.99</strong>
+            </h6>
           </div>
         </article>
         <article class="swiper-slide">
           <img class="swiper-image" src="../images/men/brooklyn-jacket.jpg" alt="offer-mockup-1">
-          <div class="swiper-description">
-            <h3>Classic Brooklyn Red Jacket</h3>
-            <p>$300</p>
-            <p>3 interest-free fees of $300</p>
+          <div class="card__body">
+            <h5 class="card-title mb-3">Classic Brooklyn Red Jacket</h5>
+            <p>Jackets</p>
+            <h6 class="mb-3">
+              <s>$61.99</s><strong class="ms-2 text-danger">$50.99</strong>
+            </h6>
           </div>
         </article>
         <article class="swiper-slide">
           <img class="swiper-image" src="../images/men/short-shirt.jpg" alt="offer-mockup-1">
-          <div class="swiper-description">
-            <h3>Regular Fit Ellerslie Linen Shirt</h3>
-            <p>$300</p>
-            <p>3 interest-free fees of $300</p>
+          <div class="card__body">
+            <h5 class="card-title mb-3">Regular Fit Ellerslie Linen Shirt</h5>
+            <p>Shirts</p>
+            <h6 class="mb-3">$61.99</h6>
           </div>
         </article>
         <article class="swiper-slide">
           <img class="swiper-image" src="../images/men/squared-coat.jpg" alt="offer-mockup-1">
-          <div class="swiper-description">
-            <h3>Orange Stripe's Squared Coat</h3>
-            <p>$300</p>
-            <p>3 interest-free fees of $300</p>
+          <div class="card__body">
+            <h5 class="card-title mb-3">Orange Stripe's Squared Coat</h5>
+            <p>Coats</p>
+            <h6 class="mb-3">
+              <s>$61.99</s><strong class="ms-2 text-danger">$50.99</strong>
+            </h6>
           </div>
         </article>
         <article class="swiper-slide">
           <img class="swiper-image" src="../images/men/squared-shirt.jpg" alt="offer-mockup-1">
-          <div class="swiper-description">
-            <h3>GG Marmont reversible belt</h3>
-            <p>$300</p>
-            <p>3 interest-free fees of $300</p>
+          <div class="card__body">
+            <h5 class="card-title mb-3">GG Marmont reversible belt</h5>
+            <p>Belts</p>
+            <h6 class="mb-3">
+              <s>$61.99</s><strong class="ms-2 text-danger">$50.99</strong>
+            </h6>
           </div>
         </article>
         <article class="swiper-slide">
           <img class="swiper-image" src="../images/men/casual-white-sweater.jpg" alt="offer-mockup-1">
-          <div class="swiper-description">
-            <h3>Casual White Sweater</h3>
-            <p>$300</p>
-            <p>3 interest-free fees of $300</p>
+          <div class="card__body">
+            <h5 class="card-title mb-3">Casual White Sweater</h5>
+            <p>Shirts</p>
+            <h6 class="mb-3">$51.99</h6>
           </div>
         </article>
       </div>
