--- a/pages/women.html
+++ b/pages/women.html
@@ -49,58 +49,64 @@
       <div class="swiper-wrapper">
         <article class="swiper-slide custom-card">
           <img class="swiper-image" src="../images/women/brown-outfit.jpg" alt="offer-mockup-1">
-          <div class="swiper-description">
-            <h3>Mid Season Brown Set</h3>
-            <p>$300</p>
-            <p>3 interest-free fees of $300</p>
+          <div class="card__body">
+            <h5 class="card-title mb-3">Mid Season Brown Set</h5>
+            <p>Sets</p>
+            <h6 class="mb-3">
+              <s>$61.99</s><strong class="ms-2 text-danger">$50.99</strong>
+            </h6>
           </div>
         </article>
         <article class="swiper-slide custom-card">
           <img class="swiper-image" src="../images/women/gardener-clothes.jpg" alt="offer-mockup-1">
-          <div class="swiper-description">
-            <h3>Vintage Blue Pocket Overall</h3>
-            <p>$300</p>
-            <p>3 interest-free fees of $300</p>
+          <div class="card__body">
+            <h5 class="card-title mb-3">Vintage Blue Pocket Overall</h5>
+            <p>Overalls</p>
+            <h6 class="mb-3">$61.99</h6>
           </div>
         </article>
         <article class="swiper-slide custom-card">
           <img class="swiper-image" src="../images/women/jean.jpg" alt="offer-mockup-1">
-          <div class="swiper-description">
-            <h3>Jeans In Mid Blue With Rips</h3>
-            <p>$300</p>
-            <p>3 interest-free fees of $300</p>
+          <div class="card__body">
+            <h5 class="card-title mb-3">Jeans In Mid Blue With Rips</h5>
+            <p>Jeans</p>
+            <h6 class="mb-3">
+              <s>$61.99</s><strong class="ms-2 text-danger">$50.99</strong>
+            </h6>
           </div>
         </article>
         <article class="swiper-slide custom-card">
           <img class="swiper-image" src="../images/women/knotted-shirt.jpg" alt="offer-mockup-1">
-          <div class="swiper-description">
-            <h3>Striped Print T-Shirt</h3>
-            <p>$300</p>
-            <p>3 interest-free fees of $300</p>
+          <div class="card__body">
+            <h5 class="card-title mb-3">Striped Print T-Shirt</h5>
+            <p>T-Shirts</p>
+            <h6 class="mb-3">$61.99</h6>
           </div>
         </article>
         <article class="swiper-slide custom-card">
           <img class="swiper-image" src="../images/women/modern-jean.jpg" alt="offer-mockup-1">
-          <div class="swiper-description">
-            <h3>Jeans In Vintage Mid Blue</h3>
-            <p>$300</p>
-            <p>3 interest-free fees of $300</p>
+          <div class="card__body">
+            <h5 class="card-title mb-3">Jeans In Vintage Mid Blue</h5>
+            <p>Jeans</p>
+            <h6 class="mb-3">$61.99</h6>
           </div>
         </article>
         <article class="swiper-slide custom-card">
           <img class="swiper-image" src="../images/women/short.jpg" alt="offer-mockup-1">
-          <div class="swiper-description">
-            <h3>Waisted Smokin' Short Fray</h3>
-            <p>$300</p>
-            <p>3 interest-free fees of $300</p>
+          <div class="card__body">
+            <h5 class="card-title mb-3">Waisted Smokin' Short Fray</h5>
+            <p>Shorts</p>
+            <h6 class="mb-3">
+              <s>$61.99</s><strong class="ms-2 text-danger">$50.99</strong>
+            </h6>
           </div>
         </article>
         <article class="swiper-slide custom-card">
           <img class="swiper-image" src="../images/women/faux-fur-scarf.jpg" alt="offer-mockup-1">
-          <div class="swiper-description">
-            <h3>Faux Fur Scarf</h3>
-            <p>$300</p>
-            <p>3 interest-free fees of $300</p>
+          <div class="card__body">
+            <h5 class="card-title mb-3">Faux Fur Scarf</h5>
+            <p>Scarves</p>
+            <h6 class="mb-3">$61.99</h6>
           </div>
         </article>
       </div>
