--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <header>
     <div class="header">
-      <a class="logo" href="#"><strong>CHEAPESTORE</strong></a>
+      <a class="logo" href=""><img src="./images/logo.png" alt=""></a>
       <input class="look-for" type="text" placeholder="Look for product, brand, category...">
       <div>
         <button class="custom-btn">Login</button>
