format fixes. deleted inline styling

--- a/pages/men.html
+++ b/pages/men.html
@@ -20,7 +20,7 @@
 <body>
   <header>
     <div class="header">
-      <a class="logo" href=""><img src="../images/logo.png" alt=""></a>
+      <a class="logo" href=""><img src="../images/logo.png" alt="logo"></a>
       <input class="look-for" type="text" placeholder="Look for product, brand, category...">
       <div>
         <button class="custom-btn">Login</button>
@@ -47,75 +47,75 @@
       <div class="swiper-button-next"></div>
       <div class="swiper-button-prev"></div>
       <div class="swiper-wrapper">
-        <article class="swiper-slide">
-          <img class="swiper-image" src="../images/men/black-white-stripes.jpg" alt="offer-mockup-1">
+        <article class="swiper-slide custom-card">
+          <img class="swiper-image" src="../images/men/black-white-stripes.jpg" alt="Black & White Stripes Shirt">
           <div class="card__body">
-            <h5 class="card-title mb-3">Black & White Stripes Shirt</h5>
+            <h2 class="card-title mb-3">Black & White Stripes Shirt</h2>
             <p>Shirts</p>
-            <h6 class="mb-3">$61.99</h6>
+            <h3 class="mb-3">$61.99</h3>
           </div>
         </article>
-        <article class="swiper-slide">
-          <img class="swiper-image" src="../images/men/black-shoes.jpg" alt="offer-mockup-1">
+        <article class="swiper-slide custom-card">
+          <img class="swiper-image" src="../images/men/black-shoes.jpg" alt="Black Classic Chelsea Pants">
           <div class="card__body">
-            <h5 class="card-title mb-3">Black Classic Chelsea Pants</h5>
+            <h2 class="card-title mb-3">Black Classic Chelsea Pants</h2>
             <p>Shoulders</p>
-            <h6 class="mb-3">
+            <h3 class="mb-3">
               <s>$61.99</s><strong class="ms-2 text-danger">$50.99</strong>
-            </h6>
+            </h3>
           </div>
         </article>
-        <article class="swiper-slide">
-          <img class="swiper-image" src="../images/men/brooklyn-jacket.jpg" alt="offer-mockup-1">
+        <article class="swiper-slide custom-card">
+          <img class="swiper-image" src="../images/men/brooklyn-jacket.jpg" alt="Classic Brooklyn Red Jacket">
           <div class="card__body">
-            <h5 class="card-title mb-3">Classic Brooklyn Red Jacket</h5>
+            <h2 class="card-title mb-3">Classic Brooklyn Red Jacket</h2>
             <p>Jackets</p>
-            <h6 class="mb-3">
+            <h3 class="mb-3">
               <s>$61.99</s><strong class="ms-2 text-danger">$50.99</strong>
-            </h6>
+            </h3>
           </div>
         </article>
-        <article class="swiper-slide">
-          <img class="swiper-image" src="../images/men/short-shirt.jpg" alt="offer-mockup-1">
+        <article class="swiper-slide custom-card">
+          <img class="swiper-image" src="../images/men/short-shirt.jpg" alt="Regular Fit Ellerslie Shirt">
           <div class="card__body">
-            <h5 class="card-title mb-3">Regular Fit Ellerslie Linen Shirt</h5>
+            <h2 class="card-title mb-3">Regular Fit Ellerslie Shirt</h2>
             <p>Shirts</p>
-            <h6 class="mb-3">$61.99</h6>
+            <h3 class="mb-3">$61.99</h3>
           </div>
         </article>
-        <article class="swiper-slide">
-          <img class="swiper-image" src="../images/men/squared-coat.jpg" alt="offer-mockup-1">
+        <article class="swiper-slide custom-card">
+          <img class="swiper-image" src="../images/men/squared-coat.jpg" alt="Orange Squared Coat">
           <div class="card__body">
-            <h5 class="card-title mb-3">Orange Stripe's Squared Coat</h5>
+            <h2 class="card-title mb-3">Orange Squared Coat</h2>
             <p>Coats</p>
-            <h6 class="mb-3">
+            <h3 class="mb-3">
               <s>$61.99</s><strong class="ms-2 text-danger">$50.99</strong>
-            </h6>
+            </h3>
           </div>
         </article>
-        <article class="swiper-slide">
-          <img class="swiper-image" src="../images/men/squared-shirt.jpg" alt="offer-mockup-1">
+        <article class="swiper-slide custom-card">
+          <img class="swiper-image" src="../images/men/squared-shirt.jpg" alt="GG Marmont reversible belt">
           <div class="card__body">
-            <h5 class="card-title mb-3">GG Marmont reversible belt</h5>
+            <h2 class="card-title mb-3">GG Marmont reversible belt</h2>
             <p>Belts</p>
-            <h6 class="mb-3">
+            <h3 class="mb-3">
               <s>$61.99</s><strong class="ms-2 text-danger">$50.99</strong>
-            </h6>
+            </h3>
           </div>
         </article>
-        <article class="swiper-slide">
-          <img class="swiper-image" src="../images/men/casual-white-sweater.jpg" alt="offer-mockup-1">
+        <article class="swiper-slide custom-card">
+          <img class="swiper-image" src="../images/men/casual-white-sweater.jpg" alt="Casual White Sweater">
           <div class="card__body">
-            <h5 class="card-title mb-3">Casual White Sweater</h5>
+            <h2 class="card-title mb-3">Casual White Sweater</h2>
             <p>Shirts</p>
-            <h6 class="mb-3">$51.99</h6>
+            <h3 class="mb-3">$51.99</h3>
           </div>
         </article>
       </div>
     </section>
     <section class="brands">
       <div class="brands__item">
-        <img src="../images/brands/click-collect.svg" alt="click-collect" style="margin: 5px">
+        <img src="../images/brands/click-collect.svg" alt="click-collect">
         <p><strong>Click & collect</strong> FREE for orders over $15</p>
       </div>
       <div class="brands__item">
@@ -163,9 +163,8 @@
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
     crossorigin="anonymous"></script>
 
-  <!-- Swiper - Start -->
+  <!-- Swiper -->
   <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
-
   <script src="../js/swiper.js"></script>
 
 </body>
