--- a/pages/offers.html
+++ b/pages/offers.html
@@ -18,7 +18,7 @@
 <body>
   <header>
     <div class="header">
-      <a class="logo" href=""><img src="../images/logo.png" alt=""></a>
+      <a class="logo" href=""><img src="../images/logo.png" alt="logo"></a>
       <input class="look-for" type="text" placeholder="Look for product, brand, category...">
       <div>
         <button class="custom-btn">Login</button>
@@ -50,7 +50,7 @@
     <section class="offers">
       <div class="row">
         <div class="col-lg-4 col-md-12 mb-4">
-          <article class="card custom-card" style="max-height: 480px;">
+          <article class="card custom-card">
             <div class="bg-image hover-zoom ripple ripple-surface ripple-surface-light card__picture"
               data-mdb-ripple-color="light">
               <img src="../images/women/gardener-clothes.jpg" alt="gardener-clothes" class="w-100" />
@@ -65,7 +65,7 @@
         </div>
 
         <div class="col-lg-4 col-md-6 mb-4">
-          <article class="card custom-card" style="max-height: 480px;">
+          <article class="card custom-card">
             <div class="bg-image hover-zoom ripple ripple-surface ripple-surface-light card__picture"
               data-mdb-ripple-color="light">
               <img src="../images/men/black-white-stripes.jpg" alt="black-white-stripes" class="w-100" />
@@ -80,7 +80,7 @@
         </div>
 
         <div class="col-lg-4 col-md-6 mb-4">
-          <article class="card custom-card" style="max-height: 480px;">
+          <article class="card custom-card">
             <div class="bg-image hover-zoom ripple card__picture" data-mdb-ripple-color="light">
               <img src="../images/women/jean.jpg" alt="jean" class="w-100" />
             </div>
@@ -98,7 +98,7 @@
 
       <div class="row">
         <div class="col-lg-4 col-md-12 mb-4">
-          <article class="card custom-card" style="max-height: 480px;">
+          <article class="card custom-card">
             <div class="bg-image hover-zoom ripple card__picture" data-mdb-ripple-color="light">
               <img src="../images/men/black-shoes.jpg" alt="black-shoes" class="w-100" />
             </div>
@@ -116,7 +116,7 @@
         </div>
 
         <div class="col-lg-4 col-md-6 mb-4">
-          <article class="card custom-card" style="max-height: 480px;">
+          <article class="card custom-card">
             <div class="bg-image hover-zoom ripple ripple-surface ripple-surface-light card__picture"
               data-mdb-ripple-color="light">
               <img src="../images/women/knotted-shirt.jpg" alt="knotted-shirt" class="w-100" />
@@ -134,7 +134,7 @@
         </div>
 
         <div class="col-lg-4 col-md-6 mb-4">
-          <article class="card custom-card" style="max-height: 480px;">
+          <article class="card custom-card">
             <div class="bg-image hover-zoom ripple card__picture" data-mdb-ripple-color="light">
               <img src="../images/men/brooklyn-jacket.jpg" alt="brooklyn-jacket" class="w-100" />
             </div>
@@ -163,7 +163,7 @@
 
       <div class="row">
         <div class="col-lg-4 col-md-12 mb-4">
-          <article class="card custom-card" style="max-height: 480px;">
+          <article class="card custom-card">
             <div class="bg-image hover-zoom ripple ripple-surface ripple-surface-light card__picture"
               data-mdb-ripple-color="light">
               <img src="../images/women/modern-jean.jpg" alt="modern-jean">
@@ -178,7 +178,7 @@
         </div>
 
         <div class="col-lg-4 col-md-6 mb-4">
-          <article class="card custom-card" style="max-height: 480px;">
+          <article class="card custom-card">
             <div class="bg-image hover-zoom ripple ripple-surface ripple-surface-light card__picture"
               data-mdb-ripple-color="light">
               <img src="../images/men/short-shirt.jpg" alt="short-shirt">
@@ -193,7 +193,7 @@
         </div>
 
         <div class="col-lg-4 col-md-6 mb-4">
-          <article class="card custom-card" style="max-height: 480px;">
+          <article class="card custom-card">
             <div class="bg-image hover-zoom ripple card__picture" data-mdb-ripple-color="light">
               <img src="../images/women/short.jpg" alt="short">
             </div>
@@ -211,7 +211,7 @@
 
       <div class="row">
         <div class="col-lg-4 col-md-12 mb-4">
-          <article class="card custom-card" style="max-height: 480px;">
+          <article class="card custom-card">
             <div class="bg-image hover-zoom ripple card__picture" data-mdb-ripple-color="light">
               <img src="../images/men/squared-coat.jpg" alt="squared-coat">
             </div>
@@ -229,7 +229,7 @@
         </div>
 
         <div class="col-lg-4 col-md-6 mb-4">
-          <article class="card custom-card" style="max-height: 480px;">
+          <article class="card custom-card">
             <div class="bg-image hover-zoom ripple ripple-surface ripple-surface-light card__picture"
               data-mdb-ripple-color="light">
               <img src="../images/women/faux-fur-scarf.jpg" alt="faux-fur-scarf">
@@ -247,7 +247,7 @@
         </div>
 
         <div class="col-lg-4 col-md-6 mb-4">
-          <article class="card custom-card" style="max-height: 480px;">
+          <article class="card custom-card">
             <div class="bg-image hover-zoom ripple card__picture" data-mdb-ripple-color="light">
               <img src="../images/men/squared-shirt.jpg" alt="squared-shirt">
             </div>
