--- a/pages/women.html
+++ b/pages/women.html
@@ -20,7 +20,7 @@
 <body>
   <header>
     <div class="header">
-      <a class="logo" href=""><img src="../images/logo.png" alt=""></a>
+      <a class="logo" href=""><img src="../images/logo.png" alt="logo"></a>
       <input class="look-for" type="text" placeholder="Look for product, brand, category...">
       <div>
         <button class="custom-btn">Login</button>
@@ -48,72 +48,72 @@
       <div class="swiper-button-prev"></div>
       <div class="swiper-wrapper">
         <article class="swiper-slide custom-card">
-          <img class="swiper-image" src="../images/women/brown-outfit.jpg" alt="offer-mockup-1">
+          <img class="swiper-image" src="../images/women/brown-outfit.jpg" alt="Mid Season Brown Set">
           <div class="card__body">
-            <h5 class="card-title mb-3">Mid Season Brown Set</h5>
+            <h2 class="card-title mb-3">Mid Season Brown Set</h2>
             <p>Sets</p>
-            <h6 class="mb-3">
+            <h3 class="mb-3">
               <s>$61.99</s><strong class="ms-2 text-danger">$50.99</strong>
-            </h6>
+            </h3>
           </div>
         </article>
         <article class="swiper-slide custom-card">
-          <img class="swiper-image" src="../images/women/gardener-clothes.jpg" alt="offer-mockup-1">
+          <img class="swiper-image" src="../images/women/gardener-clothes.jpg" alt="Vintage Blue Pocket Overall">
           <div class="card__body">
-            <h5 class="card-title mb-3">Vintage Blue Pocket Overall</h5>
+            <h2 class="card-title mb-3">Vintage Blue Pocket Overall</h2>
             <p>Overalls</p>
-            <h6 class="mb-3">$61.99</h6>
+            <h3 class="mb-3">$61.99</h3>
           </div>
         </article>
         <article class="swiper-slide custom-card">
-          <img class="swiper-image" src="../images/women/jean.jpg" alt="offer-mockup-1">
+          <img class="swiper-image" src="../images/women/jean.jpg" alt="Jeans In Mid Blue With Rips">
           <div class="card__body">
-            <h5 class="card-title mb-3">Jeans In Mid Blue With Rips</h5>
+            <h2 class="card-title mb-3">Jeans In Mid Blue With Rips</h2>
             <p>Jeans</p>
-            <h6 class="mb-3">
+            <h3 class="mb-3">
               <s>$61.99</s><strong class="ms-2 text-danger">$50.99</strong>
-            </h6>
+            </h3>
           </div>
         </article>
         <article class="swiper-slide custom-card">
-          <img class="swiper-image" src="../images/women/knotted-shirt.jpg" alt="offer-mockup-1">
+          <img class="swiper-image" src="../images/women/knotted-shirt.jpg" alt="Striped Print T-Shirt">
           <div class="card__body">
-            <h5 class="card-title mb-3">Striped Print T-Shirt</h5>
+            <h2 class="card-title mb-3">Striped Print T-Shirt</h2>
             <p>T-Shirts</p>
-            <h6 class="mb-3">$61.99</h6>
+            <h3 class="mb-3">$61.99</h3>
           </div>
         </article>
         <article class="swiper-slide custom-card">
-          <img class="swiper-image" src="../images/women/modern-jean.jpg" alt="offer-mockup-1">
+          <img class="swiper-image" src="../images/women/modern-jean.jpg" alt="Jeans In Vintage Mid Blue">
           <div class="card__body">
-            <h5 class="card-title mb-3">Jeans In Vintage Mid Blue</h5>
+            <h2 class="card-title mb-3">Jeans In Vintage Mid Blue</h2>
             <p>Jeans</p>
-            <h6 class="mb-3">$61.99</h6>
+            <h3 class="mb-3">$61.99</h3>
           </div>
         </article>
         <article class="swiper-slide custom-card">
-          <img class="swiper-image" src="../images/women/short.jpg" alt="offer-mockup-1">
+          <img class="swiper-image" src="../images/women/short.jpg" alt="Waisted Smokin' Short Fray">
           <div class="card__body">
-            <h5 class="card-title mb-3">Waisted Smokin' Short Fray</h5>
+            <h2 class="card-title mb-3">Waisted Smokin' Short Fray</h2>
             <p>Shorts</p>
-            <h6 class="mb-3">
+            <h3 class="mb-3">
               <s>$61.99</s><strong class="ms-2 text-danger">$50.99</strong>
-            </h6>
+            </h3>
           </div>
         </article>
         <article class="swiper-slide custom-card">
-          <img class="swiper-image" src="../images/women/faux-fur-scarf.jpg" alt="offer-mockup-1">
+          <img class="swiper-image" src="../images/women/faux-fur-scarf.jpg" alt="Faux Fur Scarf">
           <div class="card__body">
-            <h5 class="card-title mb-3">Faux Fur Scarf</h5>
+            <h2 class="card-title mb-3">Faux Fur Scarf</h2>
             <p>Scarves</p>
-            <h6 class="mb-3">$61.99</h6>
+            <h3 class="mb-3">$61.99</h3>
           </div>
         </article>
       </div>
     </section>
     <section class="brands">
       <div class="brands__item">
-        <img src="../images/brands/click-collect.svg" alt="click-collect" style="margin: 5px">
+        <img src="../images/brands/click-collect.svg" alt="click-collect">
         <p><strong>Click & collect</strong> FREE for orders over $15</p>
       </div>
       <div class="brands__item">
@@ -160,9 +160,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
     crossorigin="anonymous"></script>
-  <!-- Swiper - Start -->
+  <!-- Swiper -->
   <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
-
   <script src="../js/swiper.js"></script>
 
 </body>
