--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <header>
     <div class="header">
-      <a class="logo" href=""><img src="./images/logo.png" alt=""></a>
+      <a class="logo" href=""><img src="./images/logo.png" alt="logo"></a>
       <input class="look-for" type="text" placeholder="Look for product, brand, category...">
       <div>
         <button class="custom-btn">Login</button>
@@ -46,7 +46,7 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item">
-        <img class="d-block w-100" src="./images/slider/slider-off.gif" alt="">
+        <img class="d-block w-100" src="./images/slider/slider-off.gif" alt="slider-off">
         <div class="carousel-caption d-none d-md-block">
           <h2 class="bordered-title">HOLIDAY SHOP</h2>
           <p class="bordered-paragraph">Shop our best selling holiday and beachwear collection.</p>
@@ -54,7 +54,7 @@
       </div>
 
       <div class="carousel-item">
-        <img class="d-block w-100" src="./images/slider/slider-sale.gif" alt="">
+        <img class="d-block w-100" src="./images/slider/slider-sale.gif" alt="slider-sale">
         <div class="carousel-caption">
           <h2 class="bordered-title">WOMENS WHOLESALE FASHION</h2>
           <p class="bordered-paragraph">Find all of our NEW stock here at Influence, all designed in-house and made in
@@ -62,7 +62,7 @@
         </div>
       </div>
       <div class="carousel-item active">
-        <img class="d-block w-100" src="./images/slider/slider-winter.gif" alt="">
+        <img class="d-block w-100" src="./images/slider/slider-winter.gif" alt="slider-winter">
         <div class="carousel-caption">
           <h2 class="bordered-title">NEW ARRIVALS</h2>
           <p class="bordered-paragraph">Shop the best prices & designs now!</p>
@@ -102,7 +102,7 @@
 
         <div class="row">
           <div class="col-lg-4 col-md-12 mb-4">
-            <article class="card custom-card" style="max-height: 480px;">
+            <article class="card custom-card">
               <div class="bg-image hover-zoom ripple card__picture" data-mdb-ripple-color="light">
                 <img src="../images/men/squared-coat.jpg" alt="squared-coat">
               </div>
@@ -120,7 +120,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 mb-4">
-            <article class="card custom-card" style="max-height: 480px;">
+            <article class="card custom-card">
               <div class="bg-image hover-zoom ripple ripple-surface ripple-surface-light card__picture"
                 data-mdb-ripple-color="light">
                 <img src="../images/women/faux-fur-scarf.jpg" alt="faux-fur-scarf">
@@ -138,7 +138,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 mb-4">
-            <article class="card custom-card" style="max-height: 480px;">
+            <article class="card custom-card">
               <div class="bg-image hover-zoom ripple card__picture" data-mdb-ripple-color="light">
                 <img src="../images/men/squared-shirt.jpg" alt="squared-shirt">
               </div>
@@ -160,7 +160,7 @@
 
         <div class="row">
           <div class="col-lg-4 col-md-12 mb-4">
-            <article class="card custom-card" style="max-height: 480px;">
+            <article class="card custom-card">
               <div class="bg-image hover-zoom ripple ripple-surface ripple-surface-light card__picture"
                 data-mdb-ripple-color="light">
                 <img src="../images/women/modern-jean.jpg" alt="modern-jean">
@@ -177,7 +177,7 @@
 
 
           <div class="col-lg-4 col-md-6 mb-4">
-            <article class="card custom-card" style="max-height: 480px;">
+            <article class="card custom-card">
               <div class="bg-image hover-zoom ripple ripple-surface ripple-surface-light card__picture"
                 data-mdb-ripple-color="light">
                 <img src="../images/men/short-shirt.jpg" alt="short-shirt">
@@ -192,7 +192,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 mb-4">
-            <article class="card custom-card" style="max-height: 480px;">
+            <article class="card custom-card">
               <div class="bg-image hover-zoom ripple card__picture" data-mdb-ripple-color="light">
                 <img src="../images/women/short.jpg" alt="short">
               </div>
