--- a/pages/offers.html
+++ b/pages/offers.html
@@ -18,7 +18,7 @@
 <body>
   <header>
     <div class="header">
-      <a class="logo" href=""><img src="../images/logo.png" alt="logo"></a>
+      <a class="logo" href="../index.html"><img src="../images/logo.png" alt="logo"></a>
       <input class="look-for" type="text" placeholder="Look for product, brand, category...">
       <div>
         <button class="custom-btn">Login</button>
